# GTest

./: CMakeLists.txt  README.md  main.cpp
Tests/: ClassTest.h  test.cpp
